# preditor_especies_iris

./: .gitignore  app.py  pyproject.toml
docs/: README.md
